--- a/it/index.html
+++ b/it/index.html
@@ -129,7 +129,8 @@
 					<span>
 						<a title="Azure Fundamentals"
 							href="https://www.credly.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
-							target="_blank"><img class="badge-cert-shield" src="../img/badge/azure-fundamentals.png"></a>
+							target="_blank"><img class="badge-cert-shield"
+								src="../img/badge/azure-fundamentals.png"></a>
 					</span>
 					<span>
 						<a title="Programming in C#"
@@ -337,16 +338,30 @@
 							</div>
 							<div class="body">
 								<p>
-									<b>Descrizione:</b> Sono responsabile nell'aiutare i nostri clienti ad ottenere il
-									meglio dalle loro scelte tecnologiche e dai team di sviluppo. Il mio obiettivo è
-									semplice, stimolare ed ispirare i clienti Microsoft.
+									Sono il responsabile dell’utilizzo tecnico complessivo della piattaforma di
+									sviluppo di applicazioni Microsoft Azure da parte dei clienti. Contribuisco agli
+									ingaggi tecnici per lo sviluppo di applicazioni basate su Azure che includono
+									sessioni di progettazione architetturale, progetti di implementazione specifici e/o
+									progetti pilota.
 									<br><br>
-									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor, Bot,
-									Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET
-									Framework,
-									SQL Server,
-									C#, VB.NET, Blazor, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
-									<br>
+									<b>Tecnologie:</b> Azure (IaaS, PaaS, Serverless, Container), DevOps, GitHub,
+									.NET, Visual Studio
+								</p>
+								<div><b>RUOLI PRECEDENTI:</b></div>
+								<p>
+									<b>- App Innovation Customer Engineer (2020-2022)</b><br>
+									Sono responsabile nell'aiutare i nostri clienti ad ottenere il meglio dalle loro
+									scelte
+									tecnologiche e dai team di sviluppo. Il mio obiettivo è semplice, stimolare ed
+									ispirare i clienti Microsoft.
+								</p>
+
+								<p>
+									<b> - Premier Field Engineer (2019-2020)</b><br>
+									Guido i team di sviluppo che implementano soluzioni, utilizzando gli strumenti e
+									le metodologie di sviluppo più recenti. Collaboro con sviluppatori esperti per
+									garantire che i clienti abbiano le competenze per sviluppare, distribuire e
+									mantenere la loro soluzione in linea con le migliori pratiche del settore.
 								</p>
 							</div>
 						</div>
