--- a/index.html
+++ b/index.html
@@ -108,35 +108,35 @@
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-solutions-architect-expert.png"></a>
 					</span>
-					<span >
+					<span>
 						<a title="Azure Administrator Associate"
 							href="https://www.credly.com/badges/8b315b60-077f-4a2b-975a-9f0c410acdf3"
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-administrator-associate.png"></a>
 					</span>
-					<span >
+					<span>
 						<a title="Azure DevOps Engineer Expert"
 							href="https://www.credly.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-devops-engineer-expert.png"></a>
 					</span>
-					<span >
+					<span>
 						<a title="Azure Developer Associate"
 							href="https://www.credly.com/badges/ea789b72-af6f-4ed8-8653-b7a2c7234af0"
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-developer-associate.png"></a>
 					</span>
-					<span >
+					<span>
 						<a title="Azure Fundamentals"
 							href="https://www.credly.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
 							target="_blank"><img class="badge-cert-shield" src="img/badge/azure-fundamentals.png"></a>
 					</span>
-					<span >
+					<span>
 						<a title="Programming in C#"
 							href="https://www.credly.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
 							target="_blank"><img class="badge-cert-slug" src="img/badge/programming_c_sharp.png"></a>
 					</span>
-					<span >
+					<span>
 						<a title="Software Development Fundamentals"
 							href="https://www.credly.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
 							target="_blank"><img class="badge-cert-slug"
@@ -336,15 +336,28 @@
 							</div>
 							<div class="body">
 								<p>
-									<b>Description:</b> I am responsible for helping our customers get the best from
-									their technology choices and development teams. My goal is simple, to excite and
-									inspire Microsoft’s customers
+									I own the overall technical relationship between the customer and Microsoft Azure
+									Applications Development Platform. I contribute to Azure Applications Development
+									technical engagements including architectural design sessions, specific
+									implementation projects and/or pilots.
 									<br><br>
-									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor,
-									Bot, Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET
-									Framework, SQL Server,
-									C#, VB.NET, Blazor, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
-									<br>
+									<b>Technologies:</b> Azure (IaaS, PaaS, Serverless, Container), DevOps, GitHub,
+									.NET, Visual Studio
+								</p>
+								<div><b>PREVIOUS ROLES:</b></div>
+								<p>
+									<b>- App Innovation Customer Engineer (2020-2022)</b><br>
+									I am responsible for helping our customers get the best from their technology
+									choices and development teams. My goal is simple, to excite and inspire
+									Microsoft’s customers.
+								</p>
+
+								<p>
+									<b> - Premier Field Engineer (2019-2020)</b><br>
+									I provide leadership to development teams that are deploying solutions using the
+									latest development tools and methodologies. I work together with experienced
+									developers to ensure customers have the skills to develop, deploy and maintain their
+									solution in line with industry best practices.
 								</p>
 							</div>
 						</div>
