--- a/it/index.html
+++ b/it/index.html
@@ -104,31 +104,31 @@
 				<div class="row certification">
 					<span>
 						<a title="Azure Solution Architect Expert"
-							href="https://www.credly.com/badges/c45fcfd8-f553-466d-935c-7ed4ff1a272c"
+							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/DCB7232D2C96B03A?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-solutions-architect-expert.png"></a>
 					</span>
 					<span>
 						<a title="Azure Administrator Associate"
-							href="https://www.credly.com/badges/8b315b60-077f-4a2b-975a-9f0c410acdf3"
+							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/35505CC7BCD059F8?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-administrator-associate.png"></a>
 					</span>
 					<span>
 						<a title="Azure DevOps Engineer Expert"
-							href="https://www.credly.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
+							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/62F74B69EA882EC5?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-devops-engineer-expert.png"></a>
 					</span>
 					<span>
 						<a title="Azure Developer Associate"
-							href="https://www.credly.com/badges/ea789b72-af6f-4ed8-8653-b7a2c7234af0"
+							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/4F1E74786A02BCFB?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-developer-associate.png"></a>
 					</span>
 					<span>
 						<a title="Azure Fundamentals"
-							href="https://www.credly.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
+							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/50FC8283EB3F2DA6?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-fundamentals.png"></a>
 					</span>
