Add Microsoft Certified Trainer certification

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					</span>
 					<span>
 						<a title="Microsoft Certified Trainer"
-							href="https://www.credly.com/badges/2512502f-3fee-4ada-8897-1917d803fd02"
+							href="img/badge/MCT-Microsoft_Certified_Trainer-2023-2024_certificate.png"
 							target="_blank"><img class="badge-cert-slug"
 								src="img/badge/MCT-Microsoft_Certified_Trainer-2023-2024.png"></a>
 					</span>
