--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 					I constantly follow and experiment cloud, web, mobile and
 					IoT trends to offer professional consulting.
 					Project / team management abilities, I develop software by pushing the most widespread
-					methodologies and practices (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC,
-					Cloud Native, Microservices).
+					methodologies, practices and technologies (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC,
+					Cloud Native, Microservices, AI).
 				</p>
 			</div>
 			<!-- end .section-title -->
