--- a/it/index.html
+++ b/it/index.html
@@ -223,8 +223,8 @@
 				<p>
 					Seguo costantemente e sperimento le nuove tendenze riguardanti cloud, web, mobile ed IoT per
 					offrire il più professionale supporto possibile. Capacità di project / team management,
-					sviluppo software spingendo le più diffuse metodologie e pratiche (Kanban, Agile, Scrum,
-					xP, TDD, DevOps, CI/CD, IaC, Cloud Native, Microservizi).
+					sviluppo software spingendo le più diffuse metodologie, pratiche e tecnologie (Kanban, Agile, Scrum,
+					xP, TDD, DevOps, CI/CD, IaC, Cloud Native, Microservizi, AI).
 				</p>
 			</div>
 			<!-- end .section-title -->
