--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
 				</div>
 				<div class="row certification">
 					<span>
+						<a title="Azure AI Engineer Associate"
+							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/43052E026D16538C?sharingId=FA8D0C4D5964C998"
+							target="_blank"><img class="badge-cert-shield"
+								src="img/badge/azure-ai-engineer-associate.png"></a>
+					</span>
+					<span>
 						<a title="Azure Solution Architect Expert"
 							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/DCB7232D2C96B03A?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-shield"
@@ -133,20 +139,20 @@
 					</span>
 					<span>
 						<a title="Programming in C#"
-							href="https://www.credly.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
+							href="https://learn.microsoft.com/en-us/users/liguori/transcript/vnmrkh22e21nqwx#passed-exams-table-heading"
 							target="_blank"><img class="badge-cert-slug" src="img/badge/programming_c_sharp.png"></a>
 					</span>
 					<span>
 						<a title="Software Development Fundamentals"
-							href="https://www.credly.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
+							href="https://learn.microsoft.com/en-us/users/liguori/transcript/vnmrkh22e21nqwx#passed-exams-table-heading"
 							target="_blank"><img class="badge-cert-slug"
 								src="img/badge/software-development-fundamentals.png"></a>
 					</span>
 					<span>
 						<a title="Microsoft Certified Trainer"
-							href="img/badge/MCT-Microsoft_Certified_Trainer-2023-2024_certificate.png"
+							href="docs/MCT Certificate.pdf"
 							target="_blank"><img class="badge-cert-slug"
-								src="img/badge/MCT-Microsoft_Certified_Trainer-2023-2024.png"></a>
+								src="img/badge/MCT-Microsoft_Certified_Trainer.png"></a>
 					</span>
 				</div>
 				<!-- end .cotainer -->
