--- a/it/index.html
+++ b/it/index.html
@@ -106,7 +106,7 @@
 						<a title="Azure AI Engineer Associate"
 							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/43052E026D16538C?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-shield"
-								src="img/badge/azure-ai-engineer-associate.png"></a>
+								src="../img/badge/azure-ai-engineer-associate.png"></a>
 					</span>
 					<span>
 						<a title="Azure Solution Architect Expert"
