--- a/it/index.html
+++ b/it/index.html
@@ -156,7 +156,7 @@
 						<a title="GitHub Copilot"
 							href="https://learn.microsoft.com/api/credentials/share/en-us/liguori/5220E63D9C2A9DD9?sharingId=FA8D0C4D5964C998"
 							target="_blank"><img class="badge-cert-slug"
-								src="img/badge/github-copilot.png"></a>
+								src="../img/badge/github-copilot.png"></a>
 					</span>
 				</div>
 			</div>
